--- a/src/css/mixin.scss
+++ b/src/css/mixin.scss
@@ -5,11 +5,13 @@ $state-prefix: "is-";
 // $B: $namespace;
 @mixin b($block) {
   $B: $namespace + "-" + $block !global;
+  @debug $B ;
   .#{$B} {
     @content;
   }
 }
 @mixin e($element) {
+  @debug $element;
   // element selector mixin
   $E: $element !global;
   $selector: &;
@@ -22,7 +24,7 @@ $state-prefix: "is-";
       $unit +
       ","};
   }
-  @debug $currentSelector;
+  // @debug $currentSelector;
   @if hitAllSpecialNestRule($selector) {
     @at-root {
       #{$selector} {
