--- a/src/plugin/message/src/styles/index.scss
+++ b/src/plugin/message/src/styles/index.scss
@@ -13,8 +13,9 @@
     right: 50%;
     translate: (-50% 0);
     .content {
-      @apply overflow-ellipsis  text-justify p-1;
+      @apply overflow-ellipsis  text-justify p-1 mt-1;
       display: flex;
+      min-width: 100%;
       span {
         display: inline-block;
       }
@@ -30,7 +31,7 @@
     .bottom {
       @apply pt-3 absolute bottom-0 left-0 right-0 pl-1 pr-1;
       bottom: 0px;
-      z-index: 999;
+      z-index: $z-base;
       width: 100%;
       display: inline-block;
     }
