:art: :sparkles:  :rocket: :lipstick:

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,8 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("public/icon/iconfont.css");
-@import url("public/source-code-pro-release/source-code-pro.css");
+@import url("@public/icon/iconfont.css");
+@import url("@public/source-code-pro-release/source-code-pro.css");
 @import "./animation.scss";
 
 :root {
