--- a/src/plugin/card/src/style.scss
+++ b/src/plugin/card/src/style.scss
@@ -2,7 +2,7 @@
     border: solid   1px;
     display: inline-block;
     box-shadow:  0 2px 4px rgba(0, 0, 0, .12), 0 0 6px rgba(0, 0, 0, .04);
-    @apply px-3  border-gray-200 m-1 rounded-md;
+    @apply px-3  border-gray-200 m-1 rounded-md pb-3;
     min-width: 400px ;
     @include e('head'){
         // border: solid red 1px;
