--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -20,9 +20,13 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
+  
 }
 .f-Source{
-  font-family: "Source Code Pro", Avenir, Helvetica, Arial, sans-serif;
+  font-family:'Source Code Pro', Avenir, Helvetica, Arial, sans-serif;
 
 }
-
+.global-disabled{
+  pointer-events: none;
+  opacity: 0.4;
+}
