Adjust component button, card; radio is under development; Optimize pipeline, add test base

--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -20,13 +20,13 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
-  
 }
-.f-Source{
-  font-family:'Source Code Pro', Avenir, Helvetica, Arial, sans-serif;
-
+.f-Source {
+  font-family: "Source Code Pro", Avenir, Helvetica, Arial, sans-serif;
 }
-.global-disabled{
+.global-disabled {
   pointer-events: none;
   opacity: 0.4;
 }
+
+
