--- a/src/css/mixin.scss
+++ b/src/css/mixin.scss
@@ -22,7 +22,7 @@ $state-prefix: "is-";
       $unit +
       ","};
   }
-  // @debug $currentSelector;
+  @debug $currentSelector;
   @if hitAllSpecialNestRule($selector) {
     @at-root {
       #{$selector} {
