--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -20,9 +20,11 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
+  font-family: "Source Code Pro", Avenir, Helvetica, Arial, sans-serif;
+
 }
 .f-Source {
-  font-family: "Source Code Pro", Avenir, Helvetica, Arial, sans-serif;
+  // font-family: "Source Code Pro", Avenir, Helvetica, Arial, sans-serif;
 }
 .global-disabled {
   pointer-events: none;
