--- a/src/plugins/radio/style.scss
+++ b/src/plugins/radio/style.scss
@@ -7,6 +7,7 @@
   outline: none;
   user-select: none;
   margin-right: 32px;
+  // border: solid red 1px;
   
   span {
     padding-bottom: 0;
@@ -42,7 +43,6 @@
   @include e(label) {
     position: relative;
     cursor: pointer;
-
     display: inline-block;
     box-sizing: border-box;
     @apply  pl-2;  
